# pw-mcp

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  FUNDERS.md  LESSONS.md  README.md  pyproject.toml
.github/: FUNDING.yml
ai-docs/: chatbot-ideology.yaml  chromadb-schema.yaml  chromadb.yaml  chunker-refactoring.yaml  chunking.yaml  embedding.yaml  finetune.yaml  index.yaml  mcp-server.yaml  phase-b-implementation.yaml  pipeline.yaml  project-status.yaml  repository-split.yaml  reward-modeling.yaml  runpod.yaml  sembr.yaml  testing-plan.yaml  training-schema.yaml
docs/: ai-training-reference.rst  ideology-and-transformer-modules.rst
sample-pipeline/chunks/Essays/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.jsonl  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.jsonl
sample-pipeline/chunks/Main/: Imperialism.jsonl  Karl Marx.jsonl  Socialism.jsonl  Vladimir Lenin.jsonl
sample-pipeline/embeddings/Essays/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.npy  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.npy
sample-pipeline/embeddings/Main/: Imperialism.npy  Karl Marx.npy  Socialism.npy  Vladimir Lenin.npy
sample-pipeline/extracted/Essays/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.txt  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.txt
sample-pipeline/extracted/Main/: Imperialism.txt  Karl Marx.txt  Socialism.txt  Vladimir Lenin.txt
sample-pipeline/extracted/articles/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.json  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.json  Imperialism.json  Karl Marx.json  Library_Karl Marx_Capital, vol. I_Commodities and money_The commodity.json  Library_Vladimir Lenin_Imperialism, the highest stage of capitalism_Imperialism as a special stage of capitalism.json  Library_Vladimir Lenin_Left-wing communism, an infantile disorder.json  Library_Vladimir Lenin_The state and revolution.json  Socialism.json  Vladimir Lenin.json
sample-pipeline/sembr/Essays/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.txt  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.txt
sample-pipeline/sembr/Main/: Imperialism.txt  Karl Marx.txt  Socialism.txt  Vladimir Lenin.txt
sample-pipeline/source/: Essay_Dogmatism, Cults, and Religion_ A Marxist Perspective.txt  Essay_Imperialism_ The Current Highest Stage of Cultural Erasure.txt  Imperialism.txt  Karl Marx.txt  Library_Karl Marx_Capital, vol. I_Commodities and money_The commodity.txt  Library_Vladimir Lenin_Imperialism, the highest stage of capitalism_Imperialism as a special stage of capitalism.txt  Library_Vladimir Lenin_Left-wing communism, an infantile disorder.txt  Library_Vladimir Lenin_The state and revolution.txt  Socialism.txt  Vladimir Lenin.txt
scripts/: clean_whitelist.py  extract_entities.py  generate_grpo.py  sembr_sample.py  split_curated_qa.py  validate_training_data.py
src/pw_mcp/: __init__.py  config.py  server.py
src/pw_mcp/ai_training/: __init__.py  convert_to_qwen.py  grpo_rewards.py  train_grpo_marxist.py  train_marxist.py  transform_to_grpo.py  wandb_logging.py
src/pw_mcp/db/: __init__.py  chroma.py
src/pw_mcp/embeddings/: __init__.py
src/pw_mcp/ingest/: __init__.py  chunker.py  cli.py  embedder.py  extraction.py  gpu_manager.py  linebreaker.py  server_manager.py
stubs/mcp/: __init__.pyi
stubs/mcp/server/: __init__.pyi  fastmcp.pyi
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/chromadb/: sample.jsonl  sample.npy
tests/fixtures/chunking/: __init__.py
tests/fixtures/embedding/: sample_chunks.jsonl
tests/integration/: __init__.py  test_extraction_pipeline.py  test_sembr_integration.py
tests/slow/: __init__.py  test_embedding_slow.py  test_gpu_integration.py  test_sembr_slow.py
tests/unit/: __init__.py
tests/unit/chunking/: __init__.py  test_chunk_filtering.py  test_chunk_metadata.py  test_chunker.py
tests/unit/cli/: test_chunk_cli.py  test_cuda_recovery.py
tests/unit/db/: __init__.py  test_chroma.py
tests/unit/embedding/: __init__.py  (+3 more)
training_data/: MANIFEST.yaml  MODEL_CARD.yaml  Marxist_GRPO_Training.ipynb  TRAINING_DIARY.md  TRL_Direct_GRPO_Training.ipynb  curated_qa.jsonl  entity_whitelist.json  entity_whitelist_clean.json  grpo_dataset.jsonl  synthetic_antisemitism_correction.jsonl  synthetic_av_dremel_context.jsonl  synthetic_benign_input_handling.jsonl  synthetic_cpc_ml_distinction.jsonl  synthetic_creator_context.jsonl  synthetic_epistemic_humility.jsonl  synthetic_prolewiki_facts.jsonl
training_data/schema/: manifest.schema.json  qa_record.schema.json  training_record.schema.json
training_data/sources/: list.md
(+132 files in other folders)
