[project]
name = "pw-mcp"
version = "0.1.0"
description = "ProleWiki MCP Server - Vector-powered Marxist-Leninist encyclopedia search for AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.21.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "mwparserfromhell>=0.6.6",
    "httpx>=0.28.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",  # Property-based testing
    # Code Quality
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    # Type Stubs
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pw-mcp = "pw_mcp.server:main"
pw-ingest = "pw_mcp.ingest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pw_mcp"]

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests for isolated components (no I/O)",
    "integration: Tests requiring ChromaDB or file I/O",
    "slow: Tests that take significant time (embedding, etc.)",
    "property: Property-based tests using Hypothesis",
    "benchmark: Performance benchmark tests",
    "regression: Regression tests for fixed bugs",
    "retrieval: RAG retrieval quality tests",
]

# =============================================================================
# RUFF (Linting + Formatting + Import Sorting)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["prolewiki-exports/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # unused arguments
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "RUF001", # ambiguous unicode (we test Cyrillic/Chinese text)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused mock function arguments are common in tests
    "ARG002",  # unused method arguments (fixtures) are common in tests
    "SIM117",  # nested with statements for multiple mocks are clearer
]

[tool.ruff.lint.isort]
known-first-party = ["pw_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MYPY (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "stubs"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests/", "build/", "dist/", "prolewiki-exports/"]

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "chromadb.*",
    "sentence_transformers.*",
    "mwparserfromhell.*",
    "tiktoken.*",
    "ollama",
    "ollama.*",
    "openai",
    "openai.*",
    "dotenv.*",
]
ignore_missing_imports = true

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
source = ["src/pw_mcp"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# =============================================================================
# PW-MCP PROJECT CONFIGURATION
# =============================================================================
[tool.pw-mcp]
# Chunking parameters (tiktoken cl100k_base encoding for OpenAI compatibility)
chunk_target_tokens = 350
chunk_min_tokens = 100
chunk_max_tokens = 500
chunk_overlap_tokens = 50

# Embedding configuration (Ollama)
embedding_provider = "ollama"
embedding_model = "embeddinggemma"
ollama_base_url = "http://localhost:11434"
